--- a/templates/resttest.html
+++ b/templates/resttest.html
@@ -20,26 +20,14 @@ xhr.addEventListener('load', ()=>{
 });
 xhr.send(formdata);
 
-var formdata = new FormData();
-formdata.append('Location', "-75.69697435 45.38243786");
-formdata.append("max_range" , "50");
 
-
-var xhr = new XMLHttpRequest();
-xhr.open("POST", '/GetEvents');
-xhr.addEventListener('load', ()=>{
-    var userData = xhr.response;
-    console.log(userData)
-
-});
-xhr.send(formdata);
 */
 
 var formdata = new FormData();
-formdata.append("eventId", "34234");
+formdata.append('ID', "HNUx6phxzkvHuX7Gb2");
 
 var xhr = new XMLHttpRequest();
-xhr.open("POST", '/GetUsersAttending');
+xhr.open("POST", '/GetEventInfo');
 xhr.addEventListener('load', ()=>{
     var userData = xhr.response;
     console.log(userData)
