Added channel support on server side and get users route

--- a/templates/resttest.html
+++ b/templates/resttest.html
@@ -24,10 +24,9 @@ xhr.send(formdata);
 */
 
 var formdata = new FormData();
-formdata.append("eventId", "8zx8DUB4y5RxXEnduJ");
 formdata.append("Username", "mzuck");
 var xhr = new XMLHttpRequest();
-xhr.open("POST", '/GetUsersAttending');
+xhr.open("POST", '/GetUser');
 xhr.addEventListener('load', ()=>{
     var userData = xhr.response;
     console.log(userData)
